# lightrag-mcp

./: README.md  pyproject.toml
src/lightrag_mcp/: config.py  lightrag_client.py  main.py  server.py
src/lightrag_mcp/client/light_rag_server_api_client/api/graph/: create_entity_entities_entity_name_post.py  create_relation_relations_source_target_post.py  delete_entity_entities_entity_name_delete.py  edit_entity_entities_entity_name_put.py  edit_relation_relations_source_target_put.py  merge_entities_entities_merge_post.py
